# shadertests

./: README.md
slime/: CMakeLists.txt  computeShader.glsl  fragmentShader.glsl  shader.glsl  slime.cpp  vertexShader.glsl
slime/glad/include/glad/: glad.h
slime/glad/src/: glad.c
